# NaClO-Image

./: .gitignore  1.c  1.tga  A  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  naclo_image.h  naclo_image1.h  readme  run.sh
.github/workflows/: static.yml
html/: annotated.html  annotated_dup.js  classes.html  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  index.html  menudata.js  naclo__image1_8h.html  naclo__image1_8h.js  naclo__image1_8h_source.html  navtreedata.js  navtreeindex0.js  struct_na_cl_o___color_mode_r_g_b.html  struct_na_cl_o___color_mode_r_g_b_a.html  struct_na_cl_o___float_result.html  struct_na_cl_o___h_s_v.html  struct_na_cl_o___image.html  struct_na_cl_o___image.js  struct_na_cl_o___image_result.html  struct_na_cl_o___matrix.html  struct_na_cl_o___matrix_result.html  struct_na_cl_o___pixel_result.html  union_na_cl_o___pixel_type.html  union_na_cl_o___pixel_type.js  union_na_cl_o___union_r_g_b.html
html/search/: all_2.js  all_4.js  classes_0.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  searchdata.js  variables_0.js  variables_1.js  variables_3.js  variables_4.js  variables_5.js
