cmake_minimum_required(VERSION 3.10)
project(A C)
set(CMAKE_C_STANDARD 99 )
add_executable(A  1.c naclo_image.h naclo_image1.h stb_image.h stb_image_resize2.h stb_image_write.h)
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsanitize=address -fno-omit-frame-pointer")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fsanitize=address")
endif()
target_link_libraries(A m)